fix post footer ui align

--- a/frontend/src/containers/Post/styles.module.sass
+++ b/frontend/src/containers/Post/styles.module.sass
@@ -72,6 +72,8 @@
 .emojiStats
   display: flex
   flex-wrap: wrap
+  padding-left: 14px
+  margin-bottom: 5px
 
 .emojiStatItem
   margin-right: 5px
@@ -98,6 +100,7 @@
 .footer
   display: flex
   color: var(--chat-background-primary)
+  padding-left: 14px
 
 .postWrapper .openThreadBtn,
 .reactBtn
